--- a/Css/style.css
+++ b/Css/style.css
@@ -22,6 +22,10 @@
     align-items: center;
     align-content: center;
 }
+
+/*tamaño del logo*/
+.head .fas {font-size: 30px;} /*nuevo orginal en 100px*/
+
 /*Tamaño del h1 del header*/
 .head h1{
     font-size: 5em;
@@ -130,10 +134,6 @@
 .contenedor-general{
     display: flex;
     flex-direction: column;
-}
-
-.contenedor-general>div>h2{
-    text-align: center;
 }
 
 /*Estructura del contenedor servicios*/
@@ -253,6 +253,9 @@
     .head {
         flex-direction: row;
     }
+
+    /*tamaño del logo*/
+    .head .fas {font-size: 100px;}
 
     .menu ul{
         flex-direction: row;
